# cache_simulator

./: .gitignore  CMakeLists.txt  README.md  lru.h  main.cpp
include/: cache.h  evict.h  fifo.h  lfu.h  lru.h
src/: cache.cpp  fifo.cpp  lfu.cpp  lru.cpp  main.cpp
test/: sample.txt
